# rachel-ai

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
connectors/: open_ai_connector.py
gtaf_artifacts/: DR-COMMAND-EXEC.yaml  DRC-LOCAL-RACHEL.yaml  RB-TIM-LOCAL.yaml  README.md  SB-LOCAL-RACHEL.yaml  drc.json  drc_day.json  drc_night.json  drc_rb_guest_only.json  drc_rb_multi.json  drc_sb_api_only.json
gtaf_artifacts/dr/: DR-COMMAND-EXEC.json  DR-CONTACT-OPS.json  DR-CRYPTO-OPS.json  DR-EMAIL-BASE.json  DR-EMAIL-SEND-DAY.json  DR-SPOTIFY-OPS.json  DR-WEATHER-OPS.json  DR-WEB-SCRAPING.json
gtaf_artifacts/rb/: RB-GUEST-LOCAL.json  RB-TIM-LOCAL.json  RB-USER-LOCAL.json
gtaf_artifacts/sb/: SB-API-ONLY-RACHEL.json  SB-LOCAL-RACHEL.json
resources/: contacts.vcf
scripts/: docker-entrypoint.sh
scripts/python/: openai-chat.py  openai-talk.py  wakeup.py  whisper-to-text.py
services/: audio_service.py  chat_service.py
src/connectors/: __init__.py  _connector_interface.py  open_ai_connector.py
src/entities/: __init__.py  audio_record_result.py
src/exceptions/: __init__.py  audio_recording_failed.py  audio_transcription_failed.py  email_deletion_error.py  email_listing_error.py  email_not_found.py  function_not_found.py
src/executors/: __init__.py  _executor_interface.py  command_executor.py  contact_executor.py  crypto_data_executor.py  email_executor.py  spotify_executor.py  weather_executor.py  web_scraper_executor.py
tests/: test_action_mapper.py  test_chat_service_gtaf.py  test_gtaf_artifact_profiles.py  test_gtaf_contract_matrix.py  test_gtaf_runtime_client.py  test_gtaf_sb_rb_profiles.py  test_gtaf_sdk_integration.py
(+28 files in other folders)
