[tool.poetry]
name = "rachel-ai"
version = "0.1.0"
description = "Script Collection for the Rachel AI project."
authors = ["Tim Ullrich <mail@timullrich.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openai = "^1.50.2"
python-dotenv = "^1.0.1"
torch = "2.2.2"
openai-whisper = "^20240930"
sounddevice = "^0.5.0"
scipy = "1.10.1"
webrtcvad = "^2.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
