[tool.poetry]
name = "rachel-ai"
version = "0.1.0"
description = "Script Collection for the Rachel AI project."
authors = ["Tim Ullrich <[REDACTED_EMAIL]>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
openai = "^1.50.2"
python-dotenv = "^1.0.1"
torch = "2.2.2"
sounddevice = "^0.5.0"
webrtcvad = "^2.0.10"
colorama = "^0.4.6"
pvporcupine = "^3.0.3"
pygame = "^2.6.1"
imapclient = "^3.0.1"
pyowm = "^3.3.0"
bs4 = "^0.0.2"
pycoingecko = "^3.1.0"
spotipy = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
